fixes issue #66 now nav item do not shifts to left on hover

--- a/css/custom.css
+++ b/css/custom.css
@@ -32,7 +32,6 @@
 }
 .sticked .nav li a:hover,
 .sticked .nav li a:focus {
-  font-weight: bold;
   color: #000;
 }
 
